--- a/fanituotteet.ipynb
+++ b/fanituotteet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('fanituotteet.csv', sep =',')"
+    "df = pd.read_csv('fanituotteet.csv', sep =',').drop('ID', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100000, 21)"
+       "(100000, 20)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,14 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID\n",
       "MovieBoxes\n",
       "TShirts\n",
       "CollegeShirts\n",
@@ -81,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Books', 'FlagsAndStandards', 'UnderwearAndSocks'], ['TShirts', 'Books', 'FlagsAndStandards', 'Stickers', 'Toys', 'Sweets', 'FridgeMagnets', 'UnderwearAndSocks'], ['Music', 'FridgeMagnets', 'UnderwearAndSocks'], ['MovieBoxes', 'Caps', 'PintsAndWhiskeyGlasses', 'FridgeMagnets', 'UnderwearAndSocks'], ['Books', 'FlagsAndStandards', 'FridgeMagnets', 'UnderwearAndSocks'], ['TShirts', 'Music', 'PintsAndWhiskeyGlasses'], ['Sweets', 'FridgeMagnets', 'UnderwearAndSocks'], ['Posters', 'Stickers'], ['ScaleModels', 'FridgeMagnets', 'UnderwearAndSocks'], ['Books', 'CollectorCards']]\n"
+      "[['Books', 'FlagsAndStandards', 'UnderwearAndSocks'], ['TShirts', 'Books', 'FlagsAndStandards', 'Stickers', 'Toys', 'Sweets', 'FridgeMagnets', 'UnderwearAndSocks'], ['Music', 'FridgeMagnets', 'UnderwearAndSocks'], ['Caps', 'PintsAndWhiskeyGlasses', 'FridgeMagnets', 'UnderwearAndSocks'], ['Books', 'FlagsAndStandards', 'FridgeMagnets', 'UnderwearAndSocks'], ['TShirts', 'Music', 'PintsAndWhiskeyGlasses'], ['Sweets', 'FridgeMagnets', 'UnderwearAndSocks'], ['Posters', 'Stickers'], ['ScaleModels', 'FridgeMagnets', 'UnderwearAndSocks'], ['Books', 'CollectorCards']]\n"
      ]
     }
    ],
@@ -101,40 +100,39 @@
     "            transact.append(colnames[j])\n",
     "    if len(transact) > 0:\n",
     "        transactions.append(transact) # ei lisätä tyhiä rivejä\n",
-    "print(transactions[0:10]) # listoja listan sisällä\n",
-    "\n"
+    "print(transactions[0:10]) # listoja listan sisällä"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[RelationRecord(items=frozenset({'FlagsAndStandards', 'Books'}), support=0.13848161033797216, ordered_statistics=[OrderedStatistic(items_base=frozenset({'Books'}), items_add=frozenset({'FlagsAndStandards'}), confidence=0.5613761144411423, lift=3.8029923981669307), OrderedStatistic(items_base=frozenset({'FlagsAndStandards'}), items_add=frozenset({'Books'}), confidence=0.938131313131313, lift=3.8029923981669307)]), RelationRecord(items=frozenset({'UnderwearAndSocks', 'FridgeMagnets'}), support=0.16744532803180914, ordered_statistics=[OrderedStatistic(items_base=frozenset({'FridgeMagnets'}), items_add=frozenset({'UnderwearAndSocks'}), confidence=0.6533501405992437, lift=3.5532922905410955), OrderedStatistic(items_base=frozenset({'UnderwearAndSocks'}), items_add=frozenset({'FridgeMagnets'}), confidence=0.9106636031896203, lift=3.5532922905410955)])]\n",
-      "[RelationRecord(items=frozenset({'FlagsAndStandards', 'Books'}), support=0.13848161033797216, ordered_statistics=[OrderedStatistic(items_base=frozenset({'Books'}), items_add=frozenset({'FlagsAndStandards'}), confidence=0.5613761144411423, lift=3.8029923981669307), OrderedStatistic(items_base=frozenset({'FlagsAndStandards'}), items_add=frozenset({'Books'}), confidence=0.938131313131313, lift=3.8029923981669307)]), RelationRecord(items=frozenset({'UnderwearAndSocks', 'FridgeMagnets'}), support=0.16744532803180914, ordered_statistics=[OrderedStatistic(items_base=frozenset({'FridgeMagnets'}), items_add=frozenset({'UnderwearAndSocks'}), confidence=0.6533501405992437, lift=3.5532922905410955), OrderedStatistic(items_base=frozenset({'UnderwearAndSocks'}), items_add=frozenset({'FridgeMagnets'}), confidence=0.9106636031896203, lift=3.5532922905410955)])]\n"
+      "[RelationRecord(items=frozenset({'Books', 'FlagsAndStandards'}), support=0.13848161033797216, ordered_statistics=[OrderedStatistic(items_base=frozenset({'Books'}), items_add=frozenset({'FlagsAndStandards'}), confidence=0.5613761144411423, lift=3.8029923981669307), OrderedStatistic(items_base=frozenset({'FlagsAndStandards'}), items_add=frozenset({'Books'}), confidence=0.938131313131313, lift=3.8029923981669307)]), RelationRecord(items=frozenset({'FridgeMagnets', 'UnderwearAndSocks'}), support=0.16744532803180914, ordered_statistics=[OrderedStatistic(items_base=frozenset({'FridgeMagnets'}), items_add=frozenset({'UnderwearAndSocks'}), confidence=0.6533501405992437, lift=3.5532922905410955), OrderedStatistic(items_base=frozenset({'UnderwearAndSocks'}), items_add=frozenset({'FridgeMagnets'}), confidence=0.9106636031896203, lift=3.5532922905410955)])]\n",
+      "[RelationRecord(items=frozenset({'Books', 'FlagsAndStandards'}), support=0.13848161033797216, ordered_statistics=[OrderedStatistic(items_base=frozenset({'Books'}), items_add=frozenset({'FlagsAndStandards'}), confidence=0.5613761144411423, lift=3.8029923981669307), OrderedStatistic(items_base=frozenset({'FlagsAndStandards'}), items_add=frozenset({'Books'}), confidence=0.938131313131313, lift=3.8029923981669307)]), RelationRecord(items=frozenset({'FridgeMagnets', 'UnderwearAndSocks'}), support=0.16744532803180914, ordered_statistics=[OrderedStatistic(items_base=frozenset({'FridgeMagnets'}), items_add=frozenset({'UnderwearAndSocks'}), confidence=0.6533501405992437, lift=3.5532922905410955), OrderedStatistic(items_base=frozenset({'UnderwearAndSocks'}), items_add=frozenset({'FridgeMagnets'}), confidence=0.9106636031896203, lift=3.5532922905410955)])]\n"
      ]
     }
    ],
    "source": [
     "results = list(apriori(transactions = transactions,\n",
-    "                       min_support = 0.1,\n",
+    "                       min_support = 0.1, \n",
     "                       min_confidence = 0.1,\n",
     "                       min_lift = 1.1,\n",
     "                       min_length = 1,\n",
-    "                       max_length = 5\n",
+    "                       max_length = 4\n",
     "                       ))\n",
     "\n",
     "for result in results:\n",
-    "    print(results)\n"
+    "    print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +241,7 @@
        "3  0.167445    0.910664  (UnderwearAndSocks)      (FridgeMagnets)  3.553292"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +330,7 @@
        "0  0.138482    0.561376              (Books)  (FlagsAndStandards)  3.802992"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,16 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop('ID', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -423,23 +412,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(FlagsAndStandards)</td>\n",
-       "      <td>(Books)</td>\n",
-       "      <td>0.11880</td>\n",
-       "      <td>0.19853</td>\n",
-       "      <td>0.11145</td>\n",
-       "      <td>0.938131</td>\n",
-       "      <td>4.725388</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.087865</td>\n",
-       "      <td>12.954372</td>\n",
-       "      <td>0.894663</td>\n",
-       "      <td>0.541335</td>\n",
-       "      <td>0.922806</td>\n",
-       "      <td>0.749754</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>(Books)</td>\n",
        "      <td>(FlagsAndStandards)</td>\n",
        "      <td>0.19853</td>\n",
@@ -456,24 +428,24 @@
        "      <td>0.749754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(UnderwearAndSocks)</td>\n",
-       "      <td>(FridgeMagnets)</td>\n",
-       "      <td>0.14798</td>\n",
-       "      <td>0.20626</td>\n",
-       "      <td>0.13476</td>\n",
-       "      <td>0.910664</td>\n",
-       "      <td>4.415125</td>\n",
+       "      <th>1</th>\n",
+       "      <td>(FlagsAndStandards)</td>\n",
+       "      <td>(Books)</td>\n",
+       "      <td>0.11880</td>\n",
+       "      <td>0.19853</td>\n",
+       "      <td>0.11145</td>\n",
+       "      <td>0.938131</td>\n",
+       "      <td>4.725388</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.104238</td>\n",
-       "      <td>8.884845</td>\n",
-       "      <td>0.907849</td>\n",
-       "      <td>0.613997</td>\n",
-       "      <td>0.887449</td>\n",
-       "      <td>0.782007</td>\n",
+       "      <td>0.087865</td>\n",
+       "      <td>12.954372</td>\n",
+       "      <td>0.894663</td>\n",
+       "      <td>0.541335</td>\n",
+       "      <td>0.922806</td>\n",
+       "      <td>0.749754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>(FridgeMagnets)</td>\n",
        "      <td>(UnderwearAndSocks)</td>\n",
        "      <td>0.20626</td>\n",
@@ -489,31 +461,48 @@
        "      <td>0.593144</td>\n",
        "      <td>0.782007</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(UnderwearAndSocks)</td>\n",
+       "      <td>(FridgeMagnets)</td>\n",
+       "      <td>0.14798</td>\n",
+       "      <td>0.20626</td>\n",
+       "      <td>0.13476</td>\n",
+       "      <td>0.910664</td>\n",
+       "      <td>4.415125</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.104238</td>\n",
+       "      <td>8.884845</td>\n",
+       "      <td>0.907849</td>\n",
+       "      <td>0.613997</td>\n",
+       "      <td>0.887449</td>\n",
+       "      <td>0.782007</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "           antecedents          consequents  antecedent support  \\\n",
-       "0  (FlagsAndStandards)              (Books)             0.11880   \n",
-       "1              (Books)  (FlagsAndStandards)             0.19853   \n",
-       "2  (UnderwearAndSocks)      (FridgeMagnets)             0.14798   \n",
-       "3      (FridgeMagnets)  (UnderwearAndSocks)             0.20626   \n",
+       "0              (Books)  (FlagsAndStandards)             0.19853   \n",
+       "1  (FlagsAndStandards)              (Books)             0.11880   \n",
+       "2      (FridgeMagnets)  (UnderwearAndSocks)             0.20626   \n",
+       "3  (UnderwearAndSocks)      (FridgeMagnets)             0.14798   \n",
        "\n",
        "   consequent support  support  confidence      lift  representativity  \\\n",
-       "0             0.19853  0.11145    0.938131  4.725388               1.0   \n",
-       "1             0.11880  0.11145    0.561376  4.725388               1.0   \n",
-       "2             0.20626  0.13476    0.910664  4.415125               1.0   \n",
-       "3             0.14798  0.13476    0.653350  4.415125               1.0   \n",
+       "0             0.11880  0.11145    0.561376  4.725388               1.0   \n",
+       "1             0.19853  0.11145    0.938131  4.725388               1.0   \n",
+       "2             0.14798  0.13476    0.653350  4.415125               1.0   \n",
+       "3             0.20626  0.13476    0.910664  4.415125               1.0   \n",
        "\n",
        "   leverage  conviction  zhangs_metric   jaccard  certainty  kulczynski  \n",
-       "0  0.087865   12.954372       0.894663  0.541335   0.922806    0.749754  \n",
-       "1  0.087865    2.009011       0.983664  0.541335   0.502243    0.749754  \n",
-       "2  0.104238    8.884845       0.907849  0.613997   0.887449    0.782007  \n",
-       "3  0.104238    2.457869       0.974508  0.613997   0.593144    0.782007  "
+       "0  0.087865    2.009011       0.983664  0.541335   0.502243    0.749754  \n",
+       "1  0.087865   12.954372       0.894663  0.541335   0.922806    0.749754  \n",
+       "2  0.104238    2.457869       0.974508  0.613997   0.593144    0.782007  \n",
+       "3  0.104238    8.884845       0.907849  0.613997   0.887449    0.782007  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +559,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>(FlagsAndStandards)</td>\n",
        "      <td>(Books)</td>\n",
        "      <td>0.11880</td>\n",
@@ -587,7 +576,7 @@
        "      <td>0.749754</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>(UnderwearAndSocks)</td>\n",
        "      <td>(FridgeMagnets)</td>\n",
        "      <td>0.14798</td>\n",
@@ -604,7 +593,7 @@
        "      <td>0.782007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>(FridgeMagnets)</td>\n",
        "      <td>(UnderwearAndSocks)</td>\n",
        "      <td>0.20626</td>\n",
@@ -621,7 +610,7 @@
        "      <td>0.782007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>(Books)</td>\n",
        "      <td>(FlagsAndStandards)</td>\n",
        "      <td>0.19853</td>\n",
@@ -643,31 +632,46 @@
       ],
       "text/plain": [
        "           antecedents          consequents  antecedent support  \\\n",
-       "0  (FlagsAndStandards)              (Books)             0.11880   \n",
-       "2  (UnderwearAndSocks)      (FridgeMagnets)             0.14798   \n",
-       "3      (FridgeMagnets)  (UnderwearAndSocks)             0.20626   \n",
-       "1              (Books)  (FlagsAndStandards)             0.19853   \n",
+       "1  (FlagsAndStandards)              (Books)             0.11880   \n",
+       "3  (UnderwearAndSocks)      (FridgeMagnets)             0.14798   \n",
+       "2      (FridgeMagnets)  (UnderwearAndSocks)             0.20626   \n",
+       "0              (Books)  (FlagsAndStandards)             0.19853   \n",
        "\n",
        "   consequent support  support  confidence      lift  representativity  \\\n",
-       "0             0.19853  0.11145    0.938131  4.725388               1.0   \n",
-       "2             0.20626  0.13476    0.910664  4.415125               1.0   \n",
-       "3             0.14798  0.13476    0.653350  4.415125               1.0   \n",
-       "1             0.11880  0.11145    0.561376  4.725388               1.0   \n",
+       "1             0.19853  0.11145    0.938131  4.725388               1.0   \n",
+       "3             0.20626  0.13476    0.910664  4.415125               1.0   \n",
+       "2             0.14798  0.13476    0.653350  4.415125               1.0   \n",
+       "0             0.11880  0.11145    0.561376  4.725388               1.0   \n",
        "\n",
        "   leverage  conviction  zhangs_metric   jaccard  certainty  kulczynski  \n",
-       "0  0.087865   12.954372       0.894663  0.541335   0.922806    0.749754  \n",
-       "2  0.104238    8.884845       0.907849  0.613997   0.887449    0.782007  \n",
-       "3  0.104238    2.457869       0.974508  0.613997   0.593144    0.782007  \n",
-       "1  0.087865    2.009011       0.983664  0.541335   0.502243    0.749754  "
+       "1  0.087865   12.954372       0.894663  0.541335   0.922806    0.749754  \n",
+       "3  0.104238    8.884845       0.907849  0.613997   0.887449    0.782007  \n",
+       "2  0.104238    2.457869       0.974508  0.613997   0.593144    0.782007  \n",
+       "0  0.087865    2.009011       0.983664  0.541335   0.502243    0.749754  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rules.nlargest(n=10, columns=\"confidence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parametriavaruus\n",
+    "# param_grid = {\n",
+    "#     'min_support': [0.2, 0.3, 0.4],\n",
+    "#     'min_confidence': [0.5, 0.6, 0.7],\n",
+    "#     'min_lift': [1.0, 1.2, 1.5],\n",
+    "#     'min_length': [2, 3]\n",
+    "# }"
    ]
   }
  ],
